-- Every Haskell package must have a name and a version even if you
-- don't care at all what they are.  We just use some dummy ones.
name:                colourista-and-text
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

executable colourista-and-text
  main-is:             Main.hs
  -- Packages you depend on should be specified under "build-depends"
  -- (preferably with a version lower bound).  This is a bit like a
  -- Python "requirements.txt"
  build-depends:       base, colourista, text
  default-language:    Haskell2010
